--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+header{
+  width: 100%;
+  height: 60px;
+  background-color: #000;
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header__inner{
+  width: 100%;
+  max-width: 1340px;
+  text-align: left;
+}
+.logo{
+  color: #fff;
+  text-transform: uppercase;
+  font: bold 24px/20px sans-serif;
+}
