--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ header{
   align-items: center;
   justify-content: center;
 }
+main{
+  max-width: 1340px;
+  margin: auto;
+}
 .header__inner{
   width: 100%;
   max-width: 1340px;
@@ -29,4 +33,52 @@ header{
   color: #fff;
   text-transform: uppercase;
   font: bold 24px/20px sans-serif;
+}
+.booksList{
+  list-style: none;
+  padding: 0;
+}
+@media (min-width: 481px) {
+  .bookItem{
+    width: 50%;
+  }
+}
+@media (min-width: 992px) {
+  .bookItem{
+    width: 25%;
+  }
+}
+.bookItem figure{
+  margin: 0;
+}
+.bookItem figure img{
+  width: 100%;
+}
+.bookItem figure figcaption{
+  font-weight: bold;
+}
+.bookDesc .author{
+  font-style: italic;
+  margin-bottom: 10px;
+}
+.shorDesc{
+  text-align: left;
+}
+.pageCount{
+  text-align: left;
+  margin: 10px 0;
+  font: italic 12px/12px sans-serif;
+}
+.getLink{
+  display: block;
+  text-decoration: none;
+  padding: 10px;
+  margin: 10px 0;
+  background-color: #21f3f3;
+  color: #2b2f32;
+  border-radius: 5px;
+}
+.getLink:hover{
+  background-color: #156161;
+  color: #dedddd;
 }
