--- a/src/index.css
+++ b/src/index.css
@@ -47,17 +47,22 @@ main{
 }
 @media (min-width: 992px) {
   .bookItem{
-    width: 33%;
+    width: 20%;
   }
 }
 .bookItem figure img{
   width: 100%;
 }
 .bookImageWrapper{
-  min-height: 450px;
+  min-height: 320px;
 }
-.bookItem figure figcaption{
+.bookPageLink{
   font-weight: bold;
+  color: #000;
+  text-decoration: none;
+}
+.bookPageLink:hover{
+  color: #156161;
 }
 .bookDesc .author{
   font-style: italic;
@@ -102,4 +107,12 @@ main{
 .load_more:hover{
   background-color: #156161;
   color: #dedddd;
+}
+.singleBookPage{
+  display: flex;
+  margin: 30px auto;
+  max-width: 1340px;
+}
+.singleBookImg{
+  margin-right: 10px;
 }
