--- a/src/index.css
+++ b/src/index.css
@@ -29,11 +29,17 @@ main{
   width: 100%;
   max-width: 1340px;
   text-align: left;
+  display: flex;
+  justify-content: space-between;
 }
 .logo{
   color: #fff;
   text-transform: uppercase;
   font: bold 24px/20px sans-serif;
+  text-decoration: none;
+}
+.logo:hover{
+  color: #21f3f3;
 }
 .booksList{
   list-style: none;
@@ -160,4 +166,34 @@ main{
 .pagination__btn:not(.active):hover{
   background-color: #21f3f3;
   color: #2b2f32;
+}
+.posts{
+  max-width: 1340px;
+  margin: auto;
+}
+.postsLink{
+  color: #fff;
+  font-size: 20px;
+  text-decoration: none;
+}
+.postsLink:hover{
+  color: #21f3f3;
+}
+.postsList{
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+}
+.postItem{
+  width: 25%;
+  margin: 20px 0;
+  padding: 10px 20px;
+  box-sizing: border-box;
+}
+.postTitle{
+  min-height: 130px;
+}
+.postDesc{
+  text-align: left;
 }
