--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,9 @@ main{
   display: flex;
   flex-wrap: wrap;
 }
+.bookItem{
+  margin-bottom: 50px;
+}
 @media (min-width: 481px) {
   .bookItem{
     width: 50%;
@@ -67,6 +70,10 @@ main{
   font-weight: bold;
   color: #000;
   text-decoration: none;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  overflow: hidden;
 }
 .bookPageLink:hover{
   color: #156161;
@@ -80,6 +87,9 @@ main{
 }
 .shorDesc{
   text-align: left;
+}
+.bookInfo{
+  min-height: 630px;
 }
 .pageCount{
   text-align: left;
