--- a/src/index.css
+++ b/src/index.css
@@ -83,9 +83,15 @@ main{
 }
 .bookDesc .author{
   font-style: italic;
-  margin-bottom: 10px;
+  text-decoration: none;
+  color: #000;
+  display: block;
+}
+.bookDesc .author:hover{
+  color: #21f3f3;
 }
 .shorDesc{
+  margin-top: 10px;
   text-align: left;
 }
 .bookInfo{
